DeerIQApp/force-app/main/default/objects/Pin__c/Pin__c.object-meta.xml
<CustomObject>
    <label>Pin</label>
    <nameField>
        <label>Pin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>