DeerIQApp/force-app/main/default/objects/Pin__c/fields/Hunt_Area__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hunt Area</label>
    <referenceTo>Hunt_Area__c</referenceTo>
    <relationshipLabel>Pins</relationshipLabel>
    <relationshipName>Pins</relationshipName>
    <type>Lookup</type>
</CustomField>