DeerIQApp/force-app/main/default/objects/Pin__c/fields/Hunt_Log__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hunt Log</label>
    <referenceTo>Hunt_Log__c</referenceTo>
    <relationshipLabel>Sightings (Pins)</relationshipLabel>
    <relationshipName>Pins</relationshipName>
    <type>Lookup</type>
</CustomField>