DeerIQApp/force-app/main/default/objects/Pin__c/fields/Pin_Number__c.field-meta.xml
<CustomField>
    <fullName>Pin_Number__c</fullName>
    <displayFormat>P{0}</displayFormat>
    <label>Pin Number</label>
    <type>AutoNumber</type>
</CustomField>