DeerIQApp/force-app/main/default/objects/Pin__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Deer - Bedding - Buck</fullName>
            </value>
            <value>
                <fullName>Deer - Bedding - Doe/Unknown</fullName>
            </value>
            <value>
                <fullName>Deer - Droppings</fullName>
            </value>
            <value>
                <fullName>Deer - Food Source</fullName>
            </value>
            <value>
                <fullName>Deer - Ground Scrape</fullName>
            </value>
            <value>
                <fullName>Deer - Sighting - Buck</fullName>
            </value>
            <value>
                <fullName>Deer - Sighting - Doe</fullName>
            </value>
            <value>
                <fullName>Deer - Trail Intersection</fullName>
            </value>
            <value>
                <fullName>Deer - Tree Rub</fullName>
            </value>
            <value>
                <fullName>Deer - Water Source</fullName>
            </value>
            <value>
                <fullName>HuntSpot - Climber</fullName>
            </value>
            <value>
                <fullName>HuntSpot - Ground Blind</fullName>
            </value>
            <value>
                <fullName>HuntSpot - Hang on Stand</fullName>
            </value>
            <value>
                <fullName>HuntSpot - Ladder Stand</fullName>
            </value>
            <value>
                <fullName>HuntSpot - Other</fullName>
            </value>
            <value>
                <fullName>HuntSpot - Saddle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>